k8s/miniflux/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: miniflux
spec:
  selector:
    app: miniflux
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
