k8s/miniflux/status.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: miniflux-status
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`status.miniflux.anshulg.com`)
      services:
        - name: uptime-kuma
          namespace: uptime-kuma
          port: 80
  tls:
    secretName: miniflux-cert-tls
    domains:
      - main: status.miniflux.anshulg.com
